[package]
name = "gitpub"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
argh = "0.1"
ctor = "0.6"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime", "color"] }
flate2 = "1.0"
git2 = "0.20"
json = "0.12"
log = "0.4"
tar = "0.4"
termion = "4.0"
